--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         </ul>
     </header>
 
-    <!-- home section start -->
+    <!-- home section -->
     <section class="home" id="home">
         <div class="home-text">
             <h1>Amazing offers!!</h1>
@@ -41,7 +41,58 @@
             <img src="img/home.png" alt="fast food">
         </div>
     </section>
-    
+    <!-- about us section -->
+    <section class="about" id="about">
+        <div class="about-img">
+            <img src="img/about.png" alt="today-special">
+        </div>
+        <div class="about-text">
+            <span>About Us</span>
+            <h2>We are a chain of food resturants<br> dedicated to give the best of all food</h2>
+            <p>Swaad is chain of resturants that serves it customers with utmost dedication and love.
+                It aims to touch the customer's heart through their taste buds.
+            </p>
+            <a href="#" class="btn">Today's Menu</a>
+        </div>
+    </section>
+
+    <!-- menu section  -->
+    <section class="menu" id="menu">
+        <div class="heading">
+            <span>Food Menu</span>
+            <h2>Fresh food and great taste</h2>
+        </div>
+        <div class="menu-container">
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food1.png" alt="food1">
+                </div>
+                <h2>Burger</h2>
+                <span>$11.0</span>
+                <i class='bx bx-cart-alt' ></i>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food2.png" alt="food2">
+                </div>
+                <h2>Cheese Burger</h2>
+                <span>$12.0</span>
+                <i class='bx bx-cart-alt' ></i>
+            </div>
+
+            <div class="box">
+                <div class="box-img">
+                    <img src="img/food3.png" alt="food3">
+                </div>
+                <h2>Chicken Wings</h2>
+                <span>$15.0</span>
+                <i class='bx bx-cart-alt' ></i>
+            </div>
+        </div>
+    </section>
+
+
 
 
 
