Enhanching menu section

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <section class="home" id="home">
         <div class="home-text">
             <h1>Amazing offers!!</h1>
-            <h2>Food The <br> Most Precious Things</h2>
+            <h2>Food<br>The Essence of Life</h2>
             <a href="#" class="btn">Today's Menu</a>
         </div>
         <div class="home-img">
@@ -60,7 +60,7 @@
     <section class="menu" id="menu">
         <div class="heading">
             <span>Food Menu</span>
-            <h2>Fresh food and great taste</h2>
+            <h2>Fresh food and Great taste</h2>
         </div>
         <div class="menu-container">
             <div class="box">
@@ -69,7 +69,7 @@
                 </div>
                 <h2>Burger</h2>
                 <span>$11.0</span>
-                <i class='bx bx-cart-alt' ></i>
+                <i class='bx bx-cart-alt'></i>
             </div>
 
             <div class="box">
@@ -78,7 +78,7 @@
                 </div>
                 <h2>Cheese Burger</h2>
                 <span>$12.0</span>
-                <i class='bx bx-cart-alt' ></i>
+                <i class='bx bx-cart-alt'></i>
             </div>
 
             <div class="box">
@@ -87,10 +87,11 @@
                 </div>
                 <h2>Chicken Wings</h2>
                 <span>$15.0</span>
-                <i class='bx bx-cart-alt' ></i>
+                <i class='bx bx-cart-alt'></i>
             </div>
         </div>
     </section>
+    <!-- service section -->
 
 
 
