Adding Facilities & conatct us section and making web page & navbar responsive

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#menu">Menu</a></li>
-            <li><a href="#facilities">Facilities</a></li>
+            <li><a href="#Facilities">Facilities</a></li>
             <li><a href="#contact us">Contact Us</a></li>
         </ul>
     </header>
@@ -35,7 +35,7 @@
         <div class="home-text">
             <h1>Amazing offers!!</h1>
             <h2>Food<br>The Essence of Life</h2>
-            <a href="#" class="btn">Today's Menu</a>
+            <a href="#" class="btn">Order now</a>
         </div>
         <div class="home-img">
             <img src="img/home.png" alt="fast food">
@@ -52,7 +52,7 @@
             <p>Swaad is chain of resturants that serves it customers with utmost dedication and love.
                 It aims to touch the customer's heart through their taste buds.
             </p>
-            <a href="#" class="btn">Today's Menu</a>
+            <a href="#" class="btn">Order now</a>
         </div>
     </section>
 
@@ -91,7 +91,90 @@
             </div>
         </div>
     </section>
-    <!-- service section -->
+    <!-- Facilities section -->
+    <section class="Facilities" id="Facilities">
+        <div class="heading">
+            <span>Facilities</span>
+            <h2>We provide best quality food</h2>
+        </div>
+        <div class="Facilities-container">
+            <div class="s-box">
+                <img src="img/s1.png" alt="s1">
+                <h3>Order</h3>
+                <p>There are many variations of passages of Lorem Ipsum available but
+                    majority have suffered alteration injected humour</p>
+            </div>
+
+            <div class="s-box">
+                <img src="img/s2.png" alt="s1">
+                <h3>Shipping</h3>
+                <p>There are many variations of passages of Lorem Ipsum available but
+                    majority have suffered alteration injected humour</p>
+            </div>
+
+            <div class="s-box">
+                <img src="img/s3.png" alt="s1">
+                <h3>Delivered</h3>
+                <p>There are many variations of passages of Lorem Ipsum available but
+                    majority have suffered alteration injected humour</p>
+            </div>
+        </div>
+    </section>
+
+    <!-- contact us section  -->
+    <section class="cta" id="contact us">
+        <h2>We make quality food <br> Everyday</h2>
+        <a href="#" class="btn">Explore now</a>
+    </section>
+
+    <!-- footer section  -->
+    <section id="contact us">
+        <div class="footer">
+            <div class="main">
+                <div class="col">
+                    <h4>Menu Links</h4>
+                    <ul>
+                        <li><a href="#"> Home </a></li>
+                        <li><a href="#"> About </a></li>
+                        <li><a href="#"> Menu </a></li>
+                        <li><a href="#"> Facilities</a></li>
+                        <li><a href="#"> Contact Us</a></li>
+                    </ul>
+                </div>
+
+                <div class="col">
+                    <h4>Our Service</h4>
+                    <ul>
+                        <li><a href="#"> Delivery </a></li>
+                        <li><a href="#"> Dining </a></li>
+                        <li><a href="#"> Wedding Catering </a></li>
+                        <li><a href="#"> Birthday Catering</a></li>
+                        <li><a href="#"> Anniversary Catering</a></li>
+
+                    </ul>
+                </div>
+
+                <div class="col">
+                    <h4>Information</h4>
+                    <ul>
+                        <li><a href="#"> About Us </a></li>
+                        <li><a href="#"> Delivery Information </a></li>
+                        <li><a href="#"> Privacy Policy </a></li>
+                        <li><a href="#"> Terms & Conditions </a></li>
+                    </ul>
+                </div>
+                <div class="col">
+                    <h4>Contact Us</h4>
+                    <div class="social">
+                        <a href="#"><i class='bx bxl-facebook'></i></a>
+                        <a href="#"><i class='bx bxl-instagram' ></i></a>
+                        <a href="#"><i class='bx bxl-twitter' ></i></a>
+                        <a href="#"><i class='bx bxl-youtube' ></i></a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
 
